Implement shapeless/complex recipes; fix crawling